--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="https://4.bp.blogspot.com/-qxWysu0KsQ0/YX5y4e6uGLI/AAAAAAAACAA/Pvlz1Gigp_EixyPExFI5sm8Srr3jBuUmgCK4BGAYYCw/s113/jane-doe-img%25252B%252525281%25252529.jpg" alt="Richard hanrick" width="80">
+          <img src="https://cdn.discordapp.com/avatars/631270072001757204/0c1a7011da2d259a564f824171503977.png" alt="Richard hanrick" width="80">
         </figure>
 
         <div class="info-content">
@@ -88,7 +88,7 @@
             <div class="contact-info">
               <p class="contact-title">Discord</p>
 
-              <a href="tel:+12133522795" class="contact-link">Ton#1639</a>
+              <a class="contact-link">Ton#1639</a>
             </div>
 
           </li>
@@ -173,9 +173,9 @@
             <button class="navbar-link  active" data-nav-link>About</button>
           </li>
 
-          <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Resume</button>
-          </li>
+          <!-- <li class="navbar-item"> -->
+          <!--   <button class="navbar-link" data-nav-link>Resume</button> -->
+          <!-- </li> -->
 
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Portfolio</button>
@@ -512,190 +512,190 @@
         - #RESUME
       -->
 
-      <article class="resume" data-page="resume">
+      <!-- <article class="resume" data-page="resume"> -->
 
-        <header>
-          <h2 class="h2 article-title">Resume</h2>
-        </header>
+      <!--   <header> -->
+      <!--     <h2 class="h2 article-title">Resume</h2> -->
+      <!--   </header> -->
 
-        <section class="timeline">
+      <!--   <section class="timeline"> -->
 
-          <div class="title-wrapper">
-            <div class="icon-box">
-              <ion-icon name="book-outline"></ion-icon>
-            </div>
+      <!--     <div class="title-wrapper"> -->
+      <!--       <div class="icon-box"> -->
+      <!--         <ion-icon name="book-outline"></ion-icon> -->
+      <!--       </div> -->
 
-            <h3 class="h3">Education</h3>
-          </div>
+      <!--       <h3 class="h3">Education</h3> -->
+      <!--     </div> -->
 
-          <ol class="timeline-list">
+      <!--     <ol class="timeline-list"> -->
 
-            <li class="timeline-item">
+      <!--       <li class="timeline-item"> -->
 
-              <h4 class="h4 timeline-item-title">University school of the arts</h4>
+      <!--         <h4 class="h4 timeline-item-title">University school of the arts</h4> -->
 
-              <span>2007 — 2008</span>
+      <!--         <span>2007 — 2008</span> -->
 
-              <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
+      <!--         <p class="timeline-text"> -->
+      <!--           Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et -->
+      <!--           quas molestias -->
+      <!--           exceptur. -->
+      <!--         </p> -->
 
-            </li>
+      <!--       </li> -->
 
-            <li class="timeline-item">
+      <!--       <li class="timeline-item"> -->
 
-              <h4 class="h4 timeline-item-title">New york academy of art</h4>
+      <!--         <h4 class="h4 timeline-item-title">New york academy of art</h4> -->
 
-              <span>2006 — 2007</span>
+      <!--         <span>2006 — 2007</span> -->
 
-              <p class="timeline-text">
-                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-                omnis..
-              </p>
+      <!--         <p class="timeline-text"> -->
+      <!--           Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est -->
+      <!--           omnis.. -->
+      <!--         </p> -->
 
-            </li>
+      <!--       </li> -->
 
-            <li class="timeline-item">
+      <!--       <li class="timeline-item"> -->
 
-              <h4 class="h4 timeline-item-title">High school of art and design</h4>
+      <!--         <h4 class="h4 timeline-item-title">High school of art and design</h4> -->
 
-              <span>2002 — 2004</span>
+      <!--         <span>2002 — 2004</span> -->
 
-              <p class="timeline-text">
-                Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
-                magni dolores
-                eos.
-              </p>
+      <!--         <p class="timeline-text"> -->
+      <!--           Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur -->
+      <!--           magni dolores -->
+      <!--           eos. -->
+      <!--         </p> -->
 
-            </li>
+      <!--       </li> -->
 
-          </ol>
+      <!--     </ol> -->
 
-        </section>
+      <!--   </section> -->
 
-        <section class="timeline">
+      <!--   <section class="timeline"> -->
 
-          <div class="title-wrapper">
-            <div class="icon-box">
-              <ion-icon name="book-outline"></ion-icon>
-            </div>
+      <!--     <div class="title-wrapper"> -->
+      <!--       <div class="icon-box"> -->
+      <!--         <ion-icon name="book-outline"></ion-icon> -->
+      <!--       </div> -->
 
-            <h3 class="h3">Experience</h3>
-          </div>
+      <!--       <h3 class="h3">Experience</h3> -->
+      <!--     </div> -->
 
-          <ol class="timeline-list">
+      <!--     <ol class="timeline-list"> -->
 
-            <li class="timeline-item">
+      <!--       <li class="timeline-item"> -->
 
-              <h4 class="h4 timeline-item-title">Creative director</h4>
+      <!--         <h4 class="h4 timeline-item-title">Creative director</h4> -->
 
-              <span>2015 — Present</span>
+      <!--         <span>2015 — Present</span> -->
 
-              <p class="timeline-text">
-                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.
-              </p>
+      <!--         <p class="timeline-text"> -->
+      <!--           Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas -->
+      <!--           molestias -->
+      <!--           exceptur. -->
+      <!--         </p> -->
 
-            </li>
+      <!--       </li> -->
 
-            <li class="timeline-item">
+      <!--       <li class="timeline-item"> -->
 
-              <h4 class="h4 timeline-item-title">Art director</h4>
+      <!--         <h4 class="h4 timeline-item-title">Art director</h4> -->
 
-              <span>2013 — 2015</span>
+      <!--         <span>2013 — 2015</span> -->
 
-              <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
+      <!--         <p class="timeline-text"> -->
+      <!--           Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et -->
+      <!--           quas molestias -->
+      <!--           exceptur. -->
+      <!--         </p> -->
 
-            </li>
+      <!--       </li> -->
 
-            <li class="timeline-item">
+      <!--       <li class="timeline-item"> -->
 
-              <h4 class="h4 timeline-item-title">Web designer</h4>
+      <!--         <h4 class="h4 timeline-item-title">Web designer</h4> -->
 
-              <span>2010 — 2013</span>
+      <!--         <span>2010 — 2013</span> -->
 
-              <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
+      <!--         <p class="timeline-text"> -->
+      <!--           Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et -->
+      <!--           quas molestias -->
+      <!--           exceptur. -->
+      <!--         </p> -->
 
-            </li>
+      <!--       </li> -->
 
-          </ol>
+      <!--     </ol> -->
 
-        </section>
+      <!--   </section> -->
 
-        <section class="skill">
+      <!--   <section class="skill"> -->
 
-          <h3 class="h3 skills-title">My skills</h3>
+      <!--     <h3 class="h3 skills-title">My skills</h3> -->
 
-          <ul class="skills-list content-card">
+      <!--     <ul class="skills-list content-card"> -->
 
-            <li class="skills-item">
+      <!--       <li class="skills-item"> -->
 
-              <div class="title-wrapper">
-                <h5 class="h5">Web design</h5>
-                <data value="80">80%</data>
-              </div>
+      <!--         <div class="title-wrapper"> -->
+      <!--           <h5 class="h5">Web design</h5> -->
+      <!--           <data value="80">80%</data> -->
+      <!--         </div> -->
 
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 80%;"></div>
-              </div>
+      <!--         <div class="skill-progress-bg"> -->
+      <!--           <div class="skill-progress-fill" style="width: 80%;"></div> -->
+      <!--         </div> -->
 
-            </li>
+      <!--       </li> -->
 
-            <li class="skills-item">
+      <!--       <li class="skills-item"> -->
 
-              <div class="title-wrapper">
-                <h5 class="h5">Graphic design</h5>
-                <data value="70">70%</data>
-              </div>
+      <!--         <div class="title-wrapper"> -->
+      <!--           <h5 class="h5">Graphic design</h5> -->
+      <!--           <data value="70">70%</data> -->
+      <!--         </div> -->
 
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 70%;"></div>
-              </div>
+      <!--         <div class="skill-progress-bg"> -->
+      <!--           <div class="skill-progress-fill" style="width: 70%;"></div> -->
+      <!--         </div> -->
 
-            </li>
+      <!--       </li> -->
 
-            <li class="skills-item">
+      <!--       <li class="skills-item"> -->
 
-              <div class="title-wrapper">
-                <h5 class="h5">Branding</h5>
-                <data value="90">90%</data>
-              </div>
+      <!--         <div class="title-wrapper"> -->
+      <!--           <h5 class="h5">Branding</h5> -->
+      <!--           <data value="90">90%</data> -->
+      <!--         </div> -->
 
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 90%;"></div>
-              </div>
+      <!--         <div class="skill-progress-bg"> -->
+      <!--           <div class="skill-progress-fill" style="width: 90%;"></div> -->
+      <!--         </div> -->
 
-            </li>
+      <!--       </li> -->
 
-            <li class="skills-item">
+      <!--       <li class="skills-item"> -->
 
-              <div class="title-wrapper">
-                <h5 class="h5">WordPress</h5>
-                <data value="50">50%</data>
-              </div>
+      <!--         <div class="title-wrapper"> -->
+      <!--           <h5 class="h5">WordPress</h5> -->
+      <!--           <data value="50">50%</data> -->
+      <!--         </div> -->
 
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 50%;"></div>
-              </div>
+      <!--         <div class="skill-progress-bg"> -->
+      <!--           <div class="skill-progress-fill" style="width: 50%;"></div> -->
+      <!--         </div> -->
 
-            </li>
+      <!--       </li> -->
 
-          </ul>
+      <!--     </ul> -->
 
-        </section>
+      <!--   </section> -->
 
-      </article>
+      <!-- </article> -->
 
 
 
