--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="https://cdn.discordapp.com/avatars/631270072001757204/0c1a7011da2d259a564f824171503977.png" alt="Richard hanrick" width="80">
+          <img src="https://cdn.discordapp.com/avatars/631270072001757204/0c1a7011da2d259a564f824171503977.png" alt="Ton" width="80">
         </figure>
 
         <div class="info-content">
@@ -68,13 +68,13 @@
           <li class="contact-item">
 
             <div class="icon-box">
-              <ion-icon name="mail-outline"></ion-icon>
+              <a/href="mailto:my_eleanor.ton@pm.me" class="contact-link"><ion-icon name="mail-outline"></ion-icon></a>
             </div>
 
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:shan@example.com" class="contact-link">my_eleanor.ton@pm.me</a>
+              <a href="mailto:my_eleanor.ton@pm.me" class="contact-link">my_eleanor.ton@pm.me</a>
             </div>
 
           </li>
@@ -82,13 +82,13 @@
           <li class="contact-item">
 
             <div class="icon-box">
-              <ion-icon name="phone-portrait-outline"></ion-icon>
+              <a href="#" class="contact-link"><ion-icon name="chatbubble-ellipses-outline"></ion-icon></a>
             </div>
 
             <div class="contact-info">
               <p class="contact-title">Discord</p>
 
-              <a href="tel:+12133522795" class="contact-link">Ton#1639</a>
+              <a href="#" class="contact-link">Ton#1639</a>
             </div>
 
           </li>
@@ -172,7 +172,7 @@
         <ul class="navbar-list">
 
           <li class="navbar-item">
-            <button class="navbar-link  active" data-nav-link>About</button>
+            <button class="navbar-link  active" data-nav-link>Home</button>
           </li>
 
 	  <!-- TODO: New idea for replace resume section -->
@@ -181,9 +181,10 @@
           <!--   <button class="navbar-link" data-nav-link>Resume</button> -->
           <!-- </li> -->
 
-          <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Portfolio</button>
-          </li>
+
+          <!-- <li class="navbar-item"> -->
+          <!--   <button class="navbar-link" data-nav-link>Portfolio</button> -->
+          <!-- </li> -->
 
 	  <!-- TODO: New idea for replace blog -->
 
@@ -192,7 +193,7 @@
           <!-- </li> -->
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Contact</button>
+            <button class="navbar-link" data-nav-link>Let's chat</button>
           </li>
 
         </ul>
@@ -207,7 +208,7 @@
         - #ABOUT
       -->
 
-      <article class="about  active" data-page="about">
+      <article class="home  active" data-page="home">
 
         <header>
           <h2 class="h2 article-title">About me</h2>
@@ -215,17 +216,15 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
+	    Progressional spaghetti code cooker, world class muddy mix expert.
           </p>
 
           <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+	    > 17 yrs old<br>
+	    > Midnight for me is 4:00 AM for you<br>
+	    > Sipping on some sweet iced tea<br>
+	    > Reversing binary trees is kinda swag <br>
+	    > Trying to learn french but it's sussy
           </p>
         </section>
 
@@ -244,15 +243,14 @@
 
               <div class="service-icon-box">
 
-                <img src="./assets/images/icon-design.png
-                " alt="design icon" width="40">
+                <img src="./assets/images/icon-photo.png" alt="Software development icon" width="40">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web design</h4>
+                <h4 class="h4 service-item-title">Software development</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
+		  Prob not the most high-quality and modern softwares made at a professional level.
                 </p>
               </div>
 
@@ -261,14 +259,14 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.png" alt="Web development icon" width="40">
+                <img src="./assets/images/icon-app.png" alt="Weeb development icon" width="40">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web development</h4>
+                <h4 class="h4 service-item-title">Weeb development</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the professional level.
+                  I know JS, can i work at FAANG's as a Web developer?
                 </p>
               </div>
 
@@ -277,14 +275,16 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-app.png" alt="mobile app icon" width="40">
+                <img src="./assets/images/icon-dev.png" alt="Open source icon" width="40">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Mobile apps</h4>
+                <h4 class="h4 service-item-title">Open-Source</h4>
 
                 <p class="service-item-text">
-                  Professional development of applications for iOS and Android.
+		  I use ARCH btw.<br>
+		  Miss ya Terry Davis <3<br>
+	  	  Damn you Linus
                 </p>
               </div>
 
@@ -293,14 +293,16 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-photo.png" alt="camera icon" width="40">
+                <img src="./assets/images/icon-design.png" alt="Cats supremacy icon" width="40">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Photography</h4>
+                <h4 class="h4 service-item-title">Cats supremacy</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+		  C++ > C > Rust > Javascript < me<br>
+		  the monad is the key to salvation
+	 	  embrace the monad or die
                 </p>
               </div>
 
@@ -465,51 +467,51 @@
           - clients
         -->
 
-        <section class="clients">
+        <!-- <section class="clients"> -->
 
-          <h3 class="h3 clients-title">Clients</h3>
+        <!--   <h3 class="h3 clients-title">Clients</h3> -->
 
-          <ul class="clients-list has-scrollbar">
+        <!--   <ul class="clients-list has-scrollbar"> -->
 
-            <li class="clients-item">
-              <a href="#">
-                <img src="./assets/images/logo-1-color.png" alt="client logo">
-              </a>
-            </li>
+        <!--     <li class="clients-item"> -->
+        <!--       <a href="#"> -->
+        <!--         <img src="./assets/images/logo-1-color.png" alt="client logo"> -->
+        <!--       </a> -->
+        <!--     </li> -->
 
-            <li class="clients-item">
-              <a href="#">
-                <img src="./assets/images/logo-2-color.png" alt="client logo">
-              </a>
-            </li>
+        <!--     <li class="clients-item"> -->
+        <!--       <a href="#"> -->
+        <!--         <img src="./assets/images/logo-2-color.png" alt="client logo"> -->
+        <!--       </a> -->
+        <!--     </li> -->
 
-            <li class="clients-item">
-              <a href="#">
-                <img src="./assets/images/logo-3-color.png" alt="client logo">
-              </a>
-            </li>
+        <!--     <li class="clients-item"> -->
+        <!--       <a href="#"> -->
+        <!--         <img src="./assets/images/logo-3-color.png" alt="client logo"> -->
+        <!--       </a> -->
+        <!--     </li> -->
 
-            <li class="clients-item">
-              <a href="#">
-                <img src="./assets/images/logo-4-color.png" alt="client logo">
-              </a>
-            </li>
+        <!--     <li class="clients-item"> -->
+        <!--       <a href="#"> -->
+        <!--         <img src="./assets/images/logo-4-color.png" alt="client logo"> -->
+        <!--       </a> -->
+        <!--     </li> -->
 
-            <li class="clients-item">
-              <a href="#">
-                <img src="./assets/images/logo-5-color.png" alt="client logo">
-              </a>
-            </li>
+        <!--     <li class="clients-item"> -->
+        <!--       <a href="#"> -->
+        <!--         <img src="./assets/images/logo-5-color.png" alt="client logo"> -->
+        <!--       </a> -->
+        <!--     </li> -->
 
-            <li class="clients-item">
-              <a href="#">
-                <img src="./assets/images/logo-6-color.png" alt="client logo">
-              </a>
-            </li>
+        <!--     <li class="clients-item"> -->
+        <!--       <a href="#"> -->
+        <!--         <img src="./assets/images/logo-6-color.png" alt="client logo"> -->
+        <!--       </a> -->
+        <!--     </li> -->
 
-          </ul>
+        <!--   </ul> -->
 
-        </section>
+        <!-- </section> -->
 
       </article>
 
@@ -728,9 +730,6 @@
               <button class="active" data-filter-btn>All</button>
             </li>
 
-            <li class="filter-item">
-              <button data-filter-btn>Web design</button>
-            </li>
 
             <li class="filter-item">
               <button data-filter-btn>Applications</button>
@@ -776,171 +775,81 @@
 
           </div>
 
-          <ul class="project-list">
+          <!-- <ul class="project-list"> -->
 
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+          <!--   <li class="project-item  active" data-filter-item data-category="applications"> -->
+          <!--     <a href="github.com/Tontuu/zzep"> -->
 
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
+          <!--       <figure class="project-img"> -->
+          <!--         <div class="project-item-icon-box"> -->
+          <!--           <ion-icon name="eye-outline"></ion-icon> -->
+          <!--         </div> -->
 
-                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
-                </figure>
+          <!--         <img src="./assets/images/project-1.png" alt="zzep" loading="lazy"> -->
+          <!--       </figure> -->
 
-                <h3 class="project-title">Finance</h3>
+          <!--       <h3 class="project-title">Zzep</h3> -->
 
-                <p class="project-category">Web development</p>
+          <!--       <p class="project-category">Applications</p> -->
 
-              </a>
-            </li>
+          <!--     </a> -->
+          <!--   </li> -->
 
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+          <!--   <li class="project-item  active" data-filter-item data-category="applications"> -->
+          <!--     <a href="#"> -->
 
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
+          <!--       <figure class="project-img"> -->
+          <!--         <div class="project-item-icon-box"> -->
+          <!--           <ion-icon name="eye-outline"></ion-icon> -->
+          <!--         </div> -->
 
-                  <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
-                </figure>
+          <!--         <img src="./assets/images/project-2.png" alt="orizon" loading="lazy"> -->
+          <!--       </figure> -->
 
-                <h3 class="project-title">Orizon</h3>
+          <!--       <h3 class="project-title">Plspee</h3> -->
 
-                <p class="project-category">Web development</p>
+          <!--       <p class="project-category">Applications</p> -->
 
-              </a>
-            </li>
+          <!--     </a> -->
+          <!--   </li> -->
 
-            <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+          <!--   <li class="project-item  active" data-filter-item data-category="web development"> -->
+          <!--     <a href="#"> -->
 
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
+          <!--       <figure class="project-img"> -->
+          <!--         <div class="project-item-icon-box"> -->
+          <!--           <ion-icon name="eye-outline"></ion-icon> -->
+          <!--         </div> -->
 
-                  <img src="./assets/images/project-3.jpg" alt="fundo" loading="lazy">
-                </figure>
+          <!--         <img src="./assets/images/project-3.png" alt="fundo" loading="lazy"> -->
+          <!--       </figure> -->
 
-                <h3 class="project-title">Fundo</h3>
+          <!--       <h3 class="project-title">Weather-API</h3> -->
 
-                <p class="project-category">Web design</p>
+          <!--       <p class="project-category">Web Development</p> -->
 
-              </a>
-            </li>
+          <!--     </a> -->
+          <!--   </li> -->
 
-            <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#">
+          <!--   <li class="project-item  active" data-filter-item data-category="applications"> -->
+          <!--     <a href="#"> -->
 
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
+          <!--       <figure class="project-img"> -->
+          <!--         <div class="project-item-icon-box"> -->
+          <!--           <ion-icon name="eye-outline"></ion-icon> -->
+          <!--         </div> -->
 
-                  <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
-                </figure>
+          <!--         <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy"> -->
+          <!--       </figure> -->
 
-                <h3 class="project-title">Brawlhalla</h3>
+          <!--       <h3 class="project-title">Snake-Game</h3> -->
 
-                <p class="project-category">Applications</p>
+          <!--       <p class="project-category">Applications</p> -->
 
-              </a>
-            </li>
+          <!--     </a> -->
+          <!--   </li> -->
 
-            <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-5.png" alt="dsm." loading="lazy">
-                </figure>
-
-                <h3 class="project-title">DSM.</h3>
-
-                <p class="project-category">Web design</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-6.png" alt="metaspark" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">MetaSpark</h3>
-
-                <p class="project-category">Web design</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-7.png" alt="summary" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Summary</h3>
-
-                <p class="project-category">Web development</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-8.jpg" alt="task manager" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Task Manager</h3>
-
-                <p class="project-category">Applications</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-9.png" alt="arrival" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Arrival</h3>
-
-                <p class="project-category">Web development</p>
-
-              </a>
-            </li>
-
-          </ul>
+          <!-- </ul> -->
 
         </section>
 
@@ -1146,7 +1055,7 @@
         - #CONTACT
       -->
 
-      <article class="contact" data-page="contact">
+      <article class="let's chat" data-page="let's chat">
 
         <header>
           <h2 class="h2 article-title">Contact</h2>
