Set link on social icons

--- a/index.html
+++ b/index.html
@@ -133,15 +133,15 @@
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="https://github.com/Tontuu/" target="blanket" class="social-link">
 	      <span class="iconify" data-icon="akar-icons:github-fill"></span>
             </a>
           </li>
 
 
           <li class="social-item">
-            <a href="#" class="social-link">
-	      <span class="iconify" data-icon="akar-icons:telegram-fill"></span>
+            <a href="https://t.me/tontuu" target="blanket" class="social-link">
+					<span class="iconify" data-icon="akar-icons:telegram-fill"></span>
             </a>
           </li>
 
