Add Discord copy tag button https://github.com/Tontuu/Tontuu.github.io/issues/6

--- a/index.html
+++ b/index.html
@@ -127,8 +127,11 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="#" class="social-link">
-	      <span class="iconify" data-icon="cib:discord"></span>
+            <a class="social-link">
+	      <div class="copy-element">
+		<span class="copy-text">Copied</span>
+	      </div>
+	      <span class="iconify" onclick="discordCopy('#Ton1639')" data-icon="cib:discord"></span>
             </a>
           </li>
 
