Fix email icon color https://github.com/Tontuu/Tontuu.github.io/issues/9

--- a/index.html
+++ b/index.html
@@ -74,21 +74,20 @@
 
             <div class="contact-info">
               <p class="contact-title">Name</p>
-              <a href="#" class="contact-link">Cleiton Dos Santos S.</a>
+              <p class="contact-link">Cleiton Dos Santos S.</a>
             </div>
           </li>
 
-          <li class="contact-item">
+          <li href="localhost.com" class="contact-item">
 
             <div class="icon-box">
-              <a/href="mailto:my_eleanor.ton@pm.me" class="contact-link">
 		<span class="iconify" data-icon="ant-design:mail-outlined"></span>
 	      </a>
             </div>
 
             <div class="contact-info">
               <p class="contact-title">Email</p>
-              <a href="mailto:my_eleanor.ton@pm.me" class="contact-link">my_eleanor.ton@pm.me</a>
+              <a href="mailto:my_eleanor.ton@pm.me"><span class="contact-link">my_eleanor.ton@pm.me</span></a>
             </div>
 
           </li>
