fix margin on about-me header 4

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                   <h2 class="h2 article-title">About me</h2>
                </header>
                <section class="about-text">
-                  <h4>
+                  <h4 class="h4-text">
                      Progressional spaghetti code cooker, world class muddy mix expert.
                   </h4>
                   <p>
