--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
       <!--
          - favicon
          -->
-      <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
+      <link rel="shortcut icon" href="assets/images/logo.ico" type="image/x-icon">
       <!--
          - custom css link
          -->
-      <link rel="stylesheet" href="./assets/css/style.css">
+      <link rel="stylesheet" href="assets/css/style.css">
       <!--
          - google font link
          -->
@@ -152,7 +152,7 @@
                   <ul class="service-list">
                      <li class="service-item">
                         <div class="service-icon-box">
-                           <img src="./assets/images/icon-photo.png" alt="Software development icon" width="40">
+                           <img src="assets/images/icon-photo.png" alt="Software development icon" width="40">
                         </div>
                         <div class="service-content-box">
                            <h4 class="h4 service-item-title">Software development</h4>
@@ -163,7 +163,7 @@
                      </li>
                      <li class="service-item">
                         <div class="service-icon-box">
-                           <img src="./assets/images/icon-app.png" alt="Weeb development icon" width="40">
+                           <img src="assets/images/icon-app.png" alt="Weeb development icon" width="40">
                         </div>
                         <div class="service-content-box">
                            <h4 class="h4 service-item-title">Weeb development</h4>
@@ -174,7 +174,7 @@
                      </li>
                      <li class="service-item">
                         <div class="service-icon-box">
-                           <img src="./assets/images/icon-dev.png" alt="Open source icon" width="40">
+                           <img src="assets/images/icon-dev.png" alt="Open source icon" width="40">
                         </div>
                         <div class="service-content-box">
                            <h4 class="h4 service-item-title">Open-Source</h4>
@@ -187,7 +187,7 @@
                      </li>
                      <li class="service-item">
                         <div class="service-icon-box">
-                           <img src="./assets/images/icon-design.png" alt="Cats supremacy icon" width="40">
+                           <img src="assets/images/icon-design.png" alt="Cats supremacy icon" width="40">
                         </div>
                         <div class="service-content-box">
                            <h4 class="h4 service-item-title">Cats supremacy</h4>
@@ -206,7 +206,7 @@
       <!--
          - custom js link
          -->
-      <script src="./assets/js/script.js"></script>
+      <script src="assets/js/script.js"></script>
       <!--
          - ionicon link
          -->
