--- a/the_index.html
+++ b/the_index.html
@@ -135,10 +135,10 @@
                <section class="about-text">
                   <h4 class="h4-text"> Aspiring student who dreams of being a professional in the field of technology, and procrastinator in his spare time.</h4>
                   <p>
-                     > 17 years old.<br>
+				 > 17 years old.<br>
 		     > I'm a good writer.<br>
-		     > Skilled in OFFICE services<br>
-		     > I Hope to achieve fluency in English.<br>
+		     > Skilled in OFFICE services.<br>
+		     > I hope to achieve fluency in English.<br>
 		     > Learning French on my own.
                   </p>
                </section>
