add about me terminal style

--- a/index.html
+++ b/index.html
@@ -133,16 +133,30 @@
                   <h2 class="h2 article-title">About me</h2>
                </header>
                <section class="about-text">
-                  <h4 class="h4-text">
-                     Progressional spaghetti code cooker, world class muddy mix expert.
-                  </h4>
-                  <p>
-                     > 17 yrs old<br>
-                     > Midnight for me is 4:00 AM for you<br>
-                     > Sipping on some sweet iced tea<br>
-                     > Reversing binary trees is kinda swag <br>
-                     > Trying to learn french but it's sussy
-                  </p>
+		 <div class="terminal-container">
+		   <div class="terminal-menu">
+		     <div class="terminal-buttons terminal-close"></div>
+		     <div class="terminal-buttons terminal-minimize">
+		     </div>
+		     <div class="terminal-buttons terminal-zoom"></div>
+		   </div>
+
+		   <div class="terminal-screen">
+		     <p class="header-line">
+		       $ Progressional spaghetti code cooker, world class muddy mix expert<span class="cursor1">_</span>
+		     </p>
+
+		     <p class="items-lines">
+			> 17 yrs old<br>
+			> Midnight for me is 4:00 AM for you<br>
+			> Sipping on some sweet iced tea<br>
+			> Reversing binary trees is kinda swag <br>
+			> Trying to learn french but it's sussy<span class="cursor2">_</span>
+		     </p>
+
+		     <p class="prompt-line" style="margin-bottom: 0px">λ <span class="cursor3">_</span></p>
+
+		 </div>
                </section>
                <!--
                   - service
