add about me terminal style in the_index.html

--- a/the_index.html
+++ b/the_index.html
@@ -133,14 +133,30 @@
                   <h2 class="h2 article-title">About me</h2>
                </header>
                <section class="about-text">
-                  <h4 class="h4-text"> Aspiring student who dreams of being a professional in the field of technology, and procrastinator in his spare time.</h4>
-                  <p>
-				 > 17 years old.<br>
-		     > I'm a good writer.<br>
-		     > Skilled in OFFICE services.<br>
-		     > I hope to achieve fluency in English.<br>
-		     > Learning French on my own.
-                  </p>
+		 <div class="terminal-container">
+		   <div class="terminal-menu">
+		     <div class="terminal-buttons terminal-close"></div>
+		     <div class="terminal-buttons terminal-minimize">
+		     </div>
+		     <div class="terminal-buttons terminal-zoom"></div>
+		   </div>
+
+		   <div class="terminal-screen">
+		     <p class="header-line">
+		       $ Progressional spaghetti code cooker, world class muddy mix expert<span class="cursor1">_</span>
+		     </p>
+
+		     <p class="items-lines">
+		        > 17 years old.<br>
+			> I'm a student.<br>
+			> Skilled in OFFICE services.<br>
+			> Trying to fluency in English.<br>
+			> Learning French on my own.
+		     </p>
+
+		     <p class="prompt-line" style="margin-bottom: 0px">λ <span class="cursor3">_</span></p>
+
+		 </div>
                </section>
                <!--
                   - service
