no more blaming on linus

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                            <p class="service-item-text">
                               I use ARCH btw.<br>
                               Miss ya Terry Davis &lt;3 <br>
-                              Damn you Linus
+                              Love you Linus
                            </p>
                         </div>
                      </li>
