Change site's icon

--- a/the_index.html
+++ b/the_index.html
@@ -8,7 +8,7 @@
       <!--
          - favicon
          -->
-      <link rel="shortcut icon" href=".assets/images/logo.ico" type="image/x-icon">
+      <link rel="shortcut icon" href="assets/images/logo.svg" type="image/x-icon">
       <!--
          - custom css link
          -->
@@ -63,7 +63,7 @@
                      <div class="contact-info">
                         <address>
                            <p class="contact-title">Email</p>
-                           <a href="mailto:my_eleanor.ton@pm.me"><span class="contact-link">my_eleanor.ton@pm.me</span></a>
+                           <a href="mailto:dev.cleitonss@gmail.com"><span class="contact-link">dev.cleitonss@gmail.com</span></a>
                         </address>
                      </div>
                   </li>
