fix image logo and delete unnecessary file

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="sidebar-info">
                <figure class="avatar-box">
                   <img src=
-                     "https://cdn.discordapp.com/avatars/631270072001757204/0c1a7011da2d259a564f824171503977.png"
+                     "assets/images/avatar.jpg"
                      alt="Ton" width="80">
                </figure>
                <div class="info-content">
