--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 			> Midnight for me is 4:00 AM for you<br>
 			> Sipping on some sweet iced tea<br>
 			> Reversing binary trees is kinda swag <br>
-			> Trying to learn french but it's sussy<span class="cursor2">_</span>
+			> Santos.<span class="cursor2">_</span>
 		     </p>
 
 		     <p class="prompt-line" style="margin-bottom: 0px">λ <span class="cursor3">_</span></p>
@@ -194,8 +194,8 @@
                            <h4 class="h4 service-item-title">Open-Source</h4>
                            <p class="service-item-text">
                               I use ARCH btw.<br>
-                              Miss ya Terry Davis &lt;3 <br>
-                              Love you Linus
+                              69 == 42 &lt;3 <br>
+                              ???? 
                            </p>
                         </div>
                      </li>
@@ -206,9 +206,9 @@
                         <div class="service-content-box">
                            <h4 class="h4 service-item-title">Cats supremacy</h4>
                            <p class="service-item-text">
-                              C++ > C > Rust > Javascript &lt; me<br>
-                              the monad is the key to salvation
-                              embrace the monad or die
+                              C++ < C = Rust > Javascript < lol <br>
+                              cringe<br>
+                              zooozi
                            </p>
                         </div>
                      </li>
